# depth_browser

./: .env.example  .env.local.example  .eslintignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  i.txt  next.config.js  package.json  tsconfig.json
app/: layout.tsx  page.tsx
app/components/: DepthScene.tsx
app/lib/: depth-pipeline.ts  depth-server.ts
crates/wisp-mux/: Cargo.toml
crates/wisp-mux/src/: lib.rs  locked_sink.rs  packet.rs  unfair_select.rs
crates/wisp-mux/src/extensions/: cert.rs  mod.rs  motd.rs  password.rs  udp.rs
crates/wisp-mux/src/mux/: client.rs  inner.rs  mod.rs  server.rs
crates/wisp-mux/src/stream/: compat.rs  handles.rs  mod.rs
crates/wisp-mux/src/ws/: mod.rs  split.rs  tokio_tungstenite.rs  tokio_websockets.rs  unfold.rs
jfiles/src/: build.just  justfile  python.just  run.just
public/: sw.js
python/: check_gpu.py  depth_estimator.py  depth_estimator_onnx.py  download_models.py  requirements.txt
src/: lib.rs
src/api/: depth.rs  mod.rs  ws_depth.rs
src/server/: route_builder.rs
src/wisp/: config.rs  handler.rs  mod.rs  resolver.rs  stream.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
