[package]
name = "depth_browser"
description = "DepthXR - Screen capture with WebXR depth mapping"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["wasm"]

[lib]
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "io-util",
  "sync",
  "time",
  "signal",
] }

# Web framework
axum = { version = "0.7", features = ["http2", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
hyper = { version = "1.4", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy"] }

# WebSocket
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = [
  "sink",
  "std",
] }

# Python interop
pyo3 = { version = "0.23", features = ["auto-initialize"] }

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"
